Added new files for different waves handling

--- a/RateMovementSimulator/RateMovementSimulator.csproj
+++ b/RateMovementSimulator/RateMovementSimulator.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{5ACF464C-DD21-4200-B6DC-1A62E86A9D0B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RateMovementSimulator</RootNamespace>
+    <RootNamespace>Internovus.Wpf.Training.RateMovementSimulator.RateMovementSimulator</RootNamespace>
     <AssemblyName>RateMovementSimulator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -41,8 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\ParameterName.cs" />
+    <Compile Include="Constants\WaveName.cs" />
+    <Compile Include="Interfaces\IWave.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Waves\BlockWave.cs" />
+    <Compile Include="Waves\DoubleTriangleWave.cs" />
+    <Compile Include="Waves\RandomWave.cs" />
+    <Compile Include="Waves\SineWave.cs" />
+    <Compile Include="Waves\TriangleWave.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
