--- a/RateMovementSimulator/RateMovementSimulator.csproj
+++ b/RateMovementSimulator/RateMovementSimulator.csproj
@@ -41,8 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationCloser.cs" />
     <Compile Include="Constants\ParameterName.cs" />
-    <Compile Include="Constants\WaveName.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
