--- a/RateMovementSimulator/RateMovementSimulator.csproj
+++ b/RateMovementSimulator/RateMovementSimulator.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ApplicationArgs.cs" />
     <Compile Include="ApplicationArgsParser.cs" />
     <Compile Include="ApplicationCloser.cs" />
+    <Compile Include="ApplicationRunner.cs" />
     <Compile Include="Constants\ParameterName.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
