--- a/RateFeed/RateFeed.csproj
+++ b/RateFeed/RateFeed.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants\WaveName.cs" />
+    <Compile Include="IRateGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateGenerator.cs" />
     <Compile Include="WaveFuncFactory.cs" />
