--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ Release
 /packages/CommonServiceLocator.1.3/lib/portable-net4+sl5+netcore45+wpa81+wp8
 /packages/Unity.4.0.1/*.nupkg
 /packages/Unity.4.0.1/*.xsd
+/*.dic
