Added IoC - Unity

--- a/RateMovementVisualizer/RateMovementVisualizer.csproj
+++ b/RateMovementVisualizer/RateMovementVisualizer.csproj
@@ -127,6 +127,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\OfflineTrading.Common\OfflineTrading.Common.csproj">
+      <Project>{305452e6-5db6-4d77-8860-a62d2e0da830}</Project>
+      <Name>OfflineTrading.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RateFeed\RateFeed.csproj">
       <Project>{ea54e35e-c699-448a-82b6-2ee19b002446}</Project>
       <Name>RateFeed</Name>
