--- a/OfflineTrading.Common/OfflineTrading.Common.csproj
+++ b/OfflineTrading.Common/OfflineTrading.Common.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ApplicationArgsParser.cs" />
     <Compile Include="Constants\ParameterName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RatePoint.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
