--- a/RateFeed/RateFeed.csproj
+++ b/RateFeed/RateFeed.csproj
@@ -42,11 +42,18 @@
   <ItemGroup>
     <Compile Include="Constants\WaveName.cs" />
     <Compile Include="IRateGenerator.cs" />
+    <Compile Include="IRateGeneratorProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateGenerator.cs" />
+    <Compile Include="RateGeneratorProvider.cs" />
     <Compile Include="WaveFuncFactory.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\OfflineTrading.Common\OfflineTrading.Common.csproj">
+      <Project>{305452e6-5db6-4d77-8860-a62d2e0da830}</Project>
+      <Name>OfflineTrading.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
