--- a/RateMovementVisualizer/RateMovementVisualizer.csproj
+++ b/RateMovementVisualizer/RateMovementVisualizer.csproj
@@ -84,6 +84,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\Interfaces\IRateMovementViewModel.cs" />
     <Compile Include="ViewModels\RateMovementViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
