--- a/RateMovementVisualizer/RateMovementVisualizer.csproj
+++ b/RateMovementVisualizer/RateMovementVisualizer.csproj
@@ -86,6 +86,9 @@
     </ApplicationDefinition>
     <Compile Include="ViewModels\Interfaces\IRateMovementViewModel.cs" />
     <Compile Include="ViewModels\RateMovementViewModel.cs" />
+    <Compile Include="Views\RateMovementView.xaml.cs">
+      <DependentUpon>RateMovementView.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -98,6 +101,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\RateMovementView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -137,6 +144,7 @@
       <Name>RateFeed</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
