--- a/OfflineTrading.Common/OfflineTrading.Common.csproj
+++ b/OfflineTrading.Common/OfflineTrading.Common.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ApplicationArgs.cs" />
     <Compile Include="ApplicationArgsParser.cs" />
     <Compile Include="Constants\ParameterName.cs" />
+    <Compile Include="Constants\RegionNames.cs" />
     <Compile Include="IApplicationArgsParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RatePoint.cs" />
