--- a/OfflineTrading.App/App.config
+++ b/OfflineTrading.App/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="ScreenItemsConfiguration" type="Internovus.Wpf.Training.OfflineTrading.App.Config.ScreenItemsConfigurationSection, OfflineTrading.App" />
+    <section name="SymbolsConfiguration" type="Internovus.Wpf.Training.OfflineTrading.Configuration.SymbolsConfigurationSection, OfflineTrading.Configuration" />
   </configSections>
   <startup> 
       <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -22,10 +22,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <ScreenItemsConfiguration>
-    <ScreenItems>
-      <add name="sine"></add>
-      <!--<add name="triangle" waveType="triangle" initialRate="0" amplitude="1" period="60000" step="1000"></add>-->
-    </ScreenItems>
-  </ScreenItemsConfiguration>
+  <SymbolsConfiguration>
+    <Symbols>
+      <add name="Gold" waveType="sine" initialRate="0" amplitude="1" period="60000" step="1000"></add>
+      <add name="Iron" waveType="triangle" initialRate="0" amplitude="1" period="60000" step="1000"></add>
+    </Symbols>
+  </SymbolsConfiguration>
 </configuration>
