--- a/OfflineTrading.SelectionModule/packages.config
+++ b/OfflineTrading.SelectionModule/packages.config
@@ -8,4 +8,5 @@
   <package id="Prism.Mvvm" version="1.0.0" targetFramework="net452" />
   <package id="Prism.PubSubEvents" version="1.0.0" targetFramework="net452" />
   <package id="Prism.Wpf" version="6.1.0" targetFramework="net452" />
+  <package id="Unity" version="4.0.1" targetFramework="net461" />
 </packages>
