Added TabsModule to handle the tabs region part

--- a/OfflineTrading.App/App.config
+++ b/OfflineTrading.App/App.config
@@ -26,6 +26,7 @@
     <Symbols>
       <add name="Gold" waveType="sine" initialRate="0" amplitude="1" period="60000" step="1000"></add>
       <add name="Iron" waveType="triangle" initialRate="0" amplitude="1" period="60000" step="1000"></add>
+      <add name="Honey" waveType="doubleTriangle" initialRate="0" amplitude="1" period="60000" step="1000"></add>
     </Symbols>
   </SymbolsConfiguration>
 </configuration>
