Added functionality to show and hide tabs using the selection module and X button on each tab

--- a/OfflineTrading.SymbolsModule/OfflineTrading.SymbolsModule.csproj
+++ b/OfflineTrading.SymbolsModule/OfflineTrading.SymbolsModule.csproj
@@ -128,7 +128,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="SymbolsModule.cs" />
+    <Compile Include="ViewModels\ISymbolsViewModel.cs" />
     <Compile Include="ViewModels\ISymbolViewModel.cs" />
+    <Compile Include="ViewModels\SymbolsViewModel.cs" />
     <Compile Include="ViewModels\SymbolViewModel.cs" />
     <Compile Include="Views\SelectionView.xaml.cs">
       <DependentUpon>SelectionView.xaml</DependentUpon>
