Added user configuration to hold the amount of money that the user has.

--- a/OfflineTrading.App/App.config
+++ b/OfflineTrading.App/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <section name="SymbolsConfiguration" type="Internovus.Wpf.Training.OfflineTrading.Configuration.SymbolsConfigurationSection, OfflineTrading.Configuration" />
+    <section name="UserConfiguration" type="Internovus.Wpf.Training.OfflineTrading.Configuration.UserInfo, OfflineTrading.Configuration" />
   </configSections>
   <startup> 
       <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -37,4 +38,5 @@
       <add name="Honey" waveType="doubleTriangle" initialRate="0" amplitude="1" period="60000" step="1000"></add>
     </Symbols>
   </SymbolsConfiguration>
+  <UserConfiguration userName="Velina" amount="5000" />
 </configuration>
