--- a/OfflineTrading.Common/OfflineTrading.Common.csproj
+++ b/OfflineTrading.Common/OfflineTrading.Common.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ApplicationArgsParser.cs" />
     <Compile Include="Configuration\ISymbolConfiguration.cs" />
     <Compile Include="Configuration\ISymbolConfigurationsProvider.cs" />
+    <Compile Include="Configuration\IUserInfo.cs" />
     <Compile Include="Constants\ParameterName.cs" />
     <Compile Include="Constants\RegionNames.cs" />
     <Compile Include="IApplicationArgsParser.cs" />
