--- a/OfflineTrading.TradingModule/OfflineTrading.TradingModule.csproj
+++ b/OfflineTrading.TradingModule/OfflineTrading.TradingModule.csproj
@@ -91,6 +91,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="TradingModule.cs" />
+    <Compile Include="Views\UserAmountView.xaml.cs">
+      <DependentUpon>UserAmountView.xaml</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -101,6 +104,18 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Views\UserAmountView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OfflineTrading.Common\OfflineTrading.Common.csproj">
+      <Project>{305452e6-5db6-4d77-8860-a62d2e0da830}</Project>
+      <Name>OfflineTrading.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
