Implemented plugging of the chart control into the tabs control - needs refactoring.

--- a/OfflineTrading.App/App.config
+++ b/OfflineTrading.App/App.config
@@ -33,9 +33,9 @@
   </runtime>
   <SymbolsConfiguration>
     <Symbols>
-      <add name="Gold" waveType="sine" initialRate="0" amplitude="1" period="60000" step="1000"></add>
-      <!--<add name="Iron" waveType="triangle" initialRate="5" amplitude="2" period="60000" step="1000"></add>
-      <add name="Honey" waveType="doubleTriangle" initialRate="6" amplitude="4" period="60000" step="1000"></add>-->
+      <add name="Gold" waveType="sine" initialRate="3" amplitude="1" period="60000" step="1000"></add>
+      <add name="Iron" waveType="triangle" initialRate="5" amplitude="2" period="60000" step="1000"></add>
+      <add name="Honey" waveType="doubletriangle" initialRate="6" amplitude="4" period="60000" step="1000"></add>
     </Symbols>
   </SymbolsConfiguration>
   <UserConfiguration userName="Velina" amount="5000" />
