--- a/RateFeed/RateFeed.csproj
+++ b/RateFeed/RateFeed.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Factories\RandomWaveFuncFactory.cs" />
     <Compile Include="Factories\SineWaveFuncFactory.cs" />
     <Compile Include="Factories\TriangleWaveFuncFactory.cs" />
+    <Compile Include="Factories\WaveFuncFactory.cs" />
     <Compile Include="Implementations\WaveFuncProvider.cs" />
     <Compile Include="Implementations\Waves\BlockWaveFunc.cs" />
     <Compile Include="Implementations\Waves\DoubleTriangleWaveFunc.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Interfaces\IRateGenerator.cs" />
     <Compile Include="Interfaces\IRateGeneratorProvider.cs" />
     <Compile Include="Interfaces\IWaveFunc.cs" />
+    <Compile Include="Interfaces\IWaveFuncFactory.cs" />
     <Compile Include="Interfaces\IWaveFuncProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Implementations\RateGenerator.cs" />
